--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Muli', sans-serif;
+  background: linear-gradient(90deg, rgb(172, 237, 238) 0%, rgba(253,187,45,1) 100%);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-img {
+  width: 220px;
+  height: 70px;
+  margin-left: 30px;
+  margin-top: 15px;
+}
+
+.header-menu {
+  margin: 8px 40px;
+}
+
+.header-menu--profile {
+  margin-right: 60px;
+  width: 50px;
 }
