--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -6,3 +6,20 @@
     display: flex;
     justify-content: space-between;
 }
+
+.card-title {
+    font-family: 'Chelsea Market', cursive;
+    text-transform: uppercase;
+}
+
+.card {
+    background: rgb(231,0,0);
+    background: radial-gradient(circle, rgba(228, 23, 23, 0) 0%, rgba(251,255,255,0.9178046218487395) 100%);
+    transition: 450ms all;
+    transform-origin: center;
+}
+
+.card:hover {
+    transform: scale(1.2);
+    opacity: 1;
+}
